# research-agent

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  main.py  pyproject.toml  research_assistant_baml.py  research_graph_notebook.ipynb  research_report.md
baml_src/: interview.baml  research.baml  researcher.baml  shared.baml
graphs/: interview_graph.py  researcher_graph.py  traced_client.py  types.py  utils.py
tests/: evaluations.py
